feat: utxos API updated
